test/classes/initializers/phase1/parentAccess.good
parentAccess.chpl:10: error: Cannot access parent field 'f1' during phase 1
